[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://shaders/crt_effects.shader" type="Shader" id=2]
[ext_resource path="res://textures/bat.png" type="Texture" id=3]
[ext_resource path="res://textures/ball.png" type="Texture" id=4]
[ext_resource path="res://scripts/Separator.gd" type="Script" id=5]
[ext_resource path="res://scripts/Border.gd" type="Script" id=6]
[ext_resource path="res://fonts/ariblk.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/GameOverMenu.gd" type="Script" id=8]
[ext_resource path="res://sounds/se_hit.wav" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0.392157, 0.392157, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0.392157, 0.392157, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 7
outline_color = Color( 0.592157, 0.584314, 0.329412, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 6 )
margin_right = 800.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 800, 600 )
render_target_update_mode = 3

[node name="LeftBat" type="Sprite" parent="."]
position = Vector2( 100, 300 )
scale = Vector2( 2, 2.5 )
texture = ExtResource( 3 )

[node name="RightBat" type="Sprite" parent="."]
position = Vector2( 700, 300 )
scale = Vector2( 2, 2.5 )
texture = ExtResource( 3 )

[node name="Ball" type="Sprite" parent="."]
position = Vector2( 400, 300 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Separator" type="Sprite" parent="."]
script = ExtResource( 5 )

[node name="Border" type="Sprite" parent="."]
script = ExtResource( 6 )

[node name="UI" type="Node2D" parent="."]
editor/display_folded = true

[node name="LeftScore" type="Label" parent="UI"]
margin_left = 150.0
margin_top = 3.0
margin_right = 311.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="RightScore" type="Label" parent="UI"]
margin_left = 454.42
margin_top = 3.0
margin_right = 625.42
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = " 0"
align = 1
valign = 1

[node name="Node2D" type="Node2D" parent="UI"]

[node name="GameOverMenu" type="Sprite" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
position = Vector2( 250, 300 )
script = ExtResource( 8 )

[node name="Title" type="Label" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -154.0
margin_right = 96.0
margin_bottom = -63.0
custom_fonts/font = SubResource( 3 )
text = "WIN!"

[node name="PlayAgain" type="Button" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -20.0
margin_right = 77.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "play agin"

[node name="Return" type="Button" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 59.5
margin_right = 76.5
margin_bottom = 103.5
custom_fonts/font = SubResource( 4 )
text = "return"

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
[connection signal="pressed" from="GameOverMenu/PlayAgain" to="GameOverMenu" method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOverMenu/Return" to="GameOverMenu" method="_on_Return_pressed"]
